sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:18: error: missing argument list for method plusPetit in class SortingEntity
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `plusPetit _` or `plusPetit(_,_)` instead of `plusPetit`.
  } while(plusPetit == false )
          ^